<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>KGraphViewerPreferencesReloadWidget</class>
 <widget class="QWidget" name="KGraphViewerPreferencesReloadWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>225</width>
    <height>128</height>
   </rect>
  </property>
  <layout class="QGridLayout">
   <item row="0" column="0">
    <widget class="QGroupBox" name="reloadOnChangeMode">
     <property name="title">
      <string>Reload files modified on disk</string>
     </property>
     <property name="selectedId" stdset="0">
      <number>2</number>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QRadioButton" name="yes">
        <property name="text">
         <string>&amp;Yes</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="no">
        <property name="text">
         <string>&amp;No</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="ask">
        <property name="text">
         <string>&amp;Ask</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
